<resources>
    <string name="app_name">ET Legacy</string>
    <string name="start_game">START GAME</string>
    <string name="commandline">Commandline:</string>
    <string name="game_working_directory">Game working directory:</string>
    <string name="_mod">Mod</string>
    <string name="fs_game">Game(fs_game)</string>
    <string name="user_mod">User mod</string>
    <string name="chooser">Chooser</string>
    <string name="input_your_mod_folder_name">Mod folder name</string>
    <string name="command_record">Command record</string>
    <string name="edit_cvar">Edit CVar</string>
    <string name="cvar_editor">CVar editor</string>
    <string name="edit_autoexec_cfg">Edit autoexec.cfg</string>
    <string name="edit_etconfig_cfg">Edit etconfig.cfg</string>
    <string name="note_gamepads_keyboards_must_be_configured_in_game_like_on_pc_not_here">Note: Gamepads/Keyboards must be configured in-game (like on PC), not here</string>
    <string name="configure_on_screen_controls">Configure on-screen controls</string>
    <string name="on_screen_button_setting">On-screen button setting</string>
    <string name="setup_on_screen_button_theme">Setup on-screen button theme</string>
    <string name="general">GENERAL</string>
    <string name="controls">CONTROLS</string>
    <string name="smooth_joystick">Smooth joystick</string>
    <string name="unfixed_joystick">Unfixed joystick</string>
    <string name="joystick_visible">Joystick visible:</string>
    <string name="map_volume_keys">Map volume keys</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="multitouch_shoot_left_mouse_button_click_on_a_second_touch">Multitouch shoot (left mouse button click on a second touch)</string>
    <string name="enable_gyroscope">Enable gyroscope</string>
    <string name="x_axis_sensitivity">X-Axis sensitivity</string>
    <string name="y_axis_sensitivity">Y-Axis sensitivity</string>
    <string name="x_axis_sensitivity_of_gyroscope">X-Axis sensitivity of gyroscope</string>
    <string name="y_axis_sensitivity_of_gyroscope">Y-Axis sensitivity of gyroscope</string>
    <string name="hide_onscreen_buttons">Hide onscreen buttons</string>
    <string name="using_mouse">Using mouse</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="suggest_game_woring_directory_tips">Suggest create folder in `%s` as game working directory for loading faster on Android 11/11+!</string>
    <string name="game_cvar_fs_basepath">Game</string>
    <string name="file_chooser">File chooser</string>
    <string name="choose_data_folder">Choose data folder</string>
    <string name="choose_current_directory">Choose</string>
    <string name="_default">Default</string>
    <string name="mod_">"Mod: "</string>
    <string name="etw_base">Wolfenstein: Enemy Territory</string>
    <string name="warning">Warning</string>
    <string name="reset_onscreen_button_config">Reset on-screen button config?</string>
    <string name="onscreen_button_config_has_reset">On-screen button config has reset.</string>
    <string name="weapon_panel">Weapon panel</string>
    <string name="reset">Reset</string>
    <string name="toggle">Toggle</string>
    <string name="button">Button</string>
    <string name="slider">Slider</string>
    <string name="toggle_key">Toggle key</string>
    <string name="touch_type">Touch type</string>
    <string name="slider_type">Slider type</string>
    <string name="key">Key</string>
    <string name="key_2">Key 2</string>
    <string name="key_3">Key 3</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>
    <string name="weapon_panel_keys">Weapon panel keys</string>
    <string name="can_t_s_read_write_external_storage_permission_is_not_granted">Can\\\'t %s! Read/Write external storage permission is not granted!</string>
    <string name="access_file">access file</string>
    <string name="file_can_not_access">File can not access:</string>
    <string name="reload">Reload</string>
    <string name="the_text_is_modified_since_open_save_changes_to_file">The text is modified since open, save changes to file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_file_successful">Save file successful.</string>
    <string name="save_file_failed">Save file failed!</string>
    <string name="no_file">No file!</string>
    <string name="controls_theme">Controls theme</string>
    <string name="tips">Tips</string>
    <string name="joystick_background">Joystick background</string>
    <string name="joystick_center">Joystick center</string>
    <string name="remove">Remove</string>
    <string name="load_game_mod_list">load game mod list</string>
    <string name="mod">mod</string>
    <string name="unset">Unset</string>
    <string name="_files">files</string>
    <string name="choose_command_record">Choose command record</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="choose">Choose</string>
    <string name="must_choose_a_command">Must choose a command</string>
    <string name="command">Command</string>
    <string name="edit_command_record">Edit command record</string>
    <string name="empty_content">Empty content</string>
    <string name="command_exists">Command exists</string>
    <string name="add_command_record">Add command record</string>
    <string name="settings">Settings</string>
    <string name="edit_">"Edit "</string>
    <string name="sub_directory">"Sub directory: "</string>
    <string name="theme">Theme</string>
    <string name="edit_config_file">Edit config file</string>
    <string name="operation">Operation</string>
    <string name="request_necessary_permissions">request necessary permissions</string>
    <string name="grant">Grant</string>
    <string name="launcher_settings">Launcher settings</string>
    <string name="launcher">Launcher</string>
    <string name="launcher_orientation">Launcher orientation</string>
    <string name="launcher_orientation_follow_system">Launcher orientation follow system</string>
    <string name="hide_ad_bar">Hide ad bar</string>
    <string name="hide_ad_bar_in_launcher">Hide ad bar in launcher</string>
    <string name="auto_save_buttons_settings_immediately_if_changed">Auto save buttons settings immediately if changed</string>
    <string name="auto_save_button_settings">Auto save button settings</string>
    <string name="language">Language</string>
    <string name="setup_launcher_language">Setup launcher language</string>
    <string name="setup_launcher_theme">Setup launcher theme</string>
    <string name="be_available_on_reboot_the_next_time">Be available on reboot the next time</string>
    <string name="app_is_rebooting">App is rebooting......</string>
    <string name="do_you_want_to_open_dev_website">Do you want to open Developer\'s Website?</string>
    <string name="startgame">start game</string>
    <string name="key_config_page_name">OnScreen Button Config</string>
    <string name="opacity">opacity</string>
    <string name="size">size</string>
    <string name="position_">Position:</string>
    <string name="size_">Size:</string>
    <string name="opacity_">Opacity:</string>
    <string name="radius_">Radius:</string>
    <string name="center_radius_">Center radius:</string>
    <string name="button_setting_has_changed_can_you_save_it">Button setting has changed! Can you save it?</string>
    <string name="joystick_setting">Joystick setting</string>
    <string name="setup_all_opacity">Setup all opacity</string>
    <string name="setup_all_size">Setup all size</string>
    <string name="reset_on_screen_controls">Reset on-screen controls</string>
    <string name="on_screen_buttons_position_unit">Position unit</string>
    <string name="save_all">Save all</string>
    <string name="back">Back</string>
    <string name="setup_all_on_screen_button_size">Setup all on-screen button size</string>
    <string name="size_s_scale_factor">Size\'s scale factor</string>
    <string name="scale_factor">Scale factor</string>
    <string name="setup_all_on_screen_buttons_size_done">Setup all on-screen buttons size done.</string>
    <string name="setup_all_on_screen_buttons_opacity_done">Setup all on-screen buttons opacity done.</string>
    <string name="setup_all_on_screen_button_opacity">Setup all on-screen button opacity</string>
    <string name="opacity_3d">Opacity(%3d)</string>
    <string name="on_screen_controls_has_reset">On-screen controls has reset.</string>
    <string name="all_on_screen_buttons_configs_saved">All on-screen buttons configs saved.</string>
    <string name="setup_joystick_done">Setup joystick done.</string>
    <string name="on_screen_buttons_layout_with_grid_limit">Button editor grid size</string>
    <string name="position_unit">Position unit(0 = automatic, 1 = disable)</string>
    <string name="friendly_padding">Friendly padding</string>
    <string name="_opacity">Opacity</string>
    <string name="joystick_outer_range_radius_s_multiple_0_disable">Joystick outer range(radius\'s multiple, 0 - disable)</string>
    <string name="radius_s_multiple">Radius\'s multiple</string>
    <string name="enable_unfixed_joystick_the_range_is_joystick_allowed_to_start_pressing_if_less_than_1_0_using_joystick_s_radius">- Enable `Unfixed joystick`: the range is joystick allowed to start pressing(if less than 1.0, using joystick\'s radius).</string>
    <string name="disable_unfixed_joystick_the_range_is_joystick_valid_motion_area">- Disable `Unfixed joystick`: the range is joystick valid motion area.</string>
    <string name="joystick_inner_dead_zone_radius_s_percentage_0_disable">Joystick inner dead zone(radius\'s percentage, 0 - disable)</string>
</resources>