<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameLauncher">


    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:background="@color/theme_etl_main_color"
        android:id="@+id/toolbar"
        app:navigationIcon="@mipmap/ic_launcher"
        app:title="ET Legacy"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        tools:layout_editor_absoluteX="1dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/grey"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        app:cornerRadius="0dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        app:tabIndicatorColor="@color/grey"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorAnimationMode="elastic"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/controls" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tablayout"/>

    <RelativeLayout
        android:id="@+id/main_ad_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <include layout="@layout/adlayout"/>
    </RelativeLayout>

</RelativeLayout>